[fixed] icon and overflow issue

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -26,6 +26,7 @@ body {
   top: 77px;
   left: 0px;
   padding-bottom: 35px;
+    overflow-x: hidden;
 }
 
 .slideshow {
